--- a/2-styles.css
+++ b/2-styles.css
@@ -19,9 +19,10 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
     --font-family-base: 'Source Sans Pro', sans-serif;
 
     --font-size-small: 1.2rem;
+    --font-size-small-medium: 1.4rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
-    --font-size-x-large: 2.3rem;
+    --font-size-x-large: 3.4rem;
     --font-size-xx-large: 4.8rem;
   
     --font-weight-regular: 400;
@@ -80,6 +81,10 @@ a {
     color: var(--text-color-white);
 }
 
+.text-blue {
+    color: var(--text-color-dark-blue);
+}
+
 .text-bold {
     font-weight: var(--font-weight-bold);
 }
@@ -92,6 +97,19 @@ a {
 .text-tagline {
     margin: 0;
 }
+
+.text-size-small {
+    font-size: var(--font-size-small);
+}
+
+.text-size-small-medium {
+    font-size: var(--font-size-small-medium);
+}
+
+.text-size-large {
+    font-size: var(--font-size-x-large);
+}
+
 /*** 2. LAYOUT ***/
 
 /* Layout
@@ -101,6 +119,10 @@ a {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.text-title {
+    text-align: center;
 }
 
 /* Header
@@ -149,6 +171,7 @@ a {
 .description-container {
     padding-left: 12rem;
     padding-right: 12rem;
+    text-align: center;
 }
 
 /* Navbar
@@ -253,10 +276,24 @@ a {
         background-size: cover;
         /*height: 70rem;*/
     }
+
+    .banner-our-results {
+        position: relative;
+        background-image: url(images/headphones_hero_2.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
 }
 
 @media only screen and (max-width: 768px) {
     .description-container {
+        padding-left: 3rem;
+        padding-right: 3rem;
+        text-align: center;
+    }
+
+    .title-container {
         padding-left: 3rem;
         padding-right: 3rem;
     }
@@ -301,33 +338,53 @@ a {
 		text-align: center;
     }
 
-    /*.header-menu .header-logo {
-		flex-basis: 70%;
-    }*/
-    
     .nav .nav-item + .nav-item {
         margin: 0;
     }
 }
 
-/*.nav .nav-link::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: var(--color-white);
-    width: 0;
-    height: 0.2rem;
-}*/
+/*** What we do Section ***/
+.what-section, .our-section{
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+}
 
-/*.nav .nav-item:hover .nav-link::before {
-    background-color: var(--color-primary);
-    width: 100%;
-}*/
-
-/*** 3. SECTION ***/
-
-/*.section-hero {
+/*** Our results Section ***/
+.pentagone {
+    background-image: url(images/pentagone.png);
     position: relative;
-    margin-top: -8.5rem;
-}*/
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.pentagone-container {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/*** Flex Containers ***/
+
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+[class^="holberton_school-icon-"] {
+    color: var(--color-primary);
+    font-size: 100px;
+}
+
+.flex-item {
+    padding: 5px;
+    width: 200px;
+    height: 180px;
+    margin-top: 50px;
+    text-align: center;
+}
